SERVER-43108 interrupt on shutdown in flushRoutingTableCacheUpdates